# treant

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  VISION.md  switch-theme.sh
benches/: bench.rs
docs/: DIATAXIS.md  SITE.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/concepts/: algorithm.md  architecture.md  chance-nodes.md  exploration-exploitation.md  parallel-mcts.md  solver-and-bounds.md  tree-policies.md
docs/docs/how-to/: batched-evaluation.md  custom-tree-policy.md  hyperparameter-tuning.md  parallel-search.md  progressive-widening.md  tree-reuse.md  wasm-integration.md
docs/docs/reference/: configuration.md  glossary.md  traits.md
docs/docs/tutorials/: 01-what-is-mcts.md  02-first-search.md  03-two-player-games.md  04-solving-games.md  05-stochastic-games.md  06-neural-network-priors.md  07-advanced-search.md  08-gumbel-search.md
docs/plugins/: wasm-plugin.js
docs/src/components/demos/: ChanceNodesDemo.tsx  ConnectFourDemo.module.css  ConnectFourDemo.tsx  ExplorationDemo.tsx  Game2048Demo.module.css  Game2048Demo.tsx  MancalaDemo.module.css  MancalaDemo.tsx  NimSolverDemo.tsx  ShiftDemo.module.css  ShiftDemo.tsx  StepThroughDemo.tsx  TicTacToeDemo.tsx  TreeGrowthDemo.tsx  UCTvsPUCTDemo.tsx  demos.module.css
docs/src/components/mcts/: ParameterControls.tsx  PlaybackControls.tsx  StatsPanel.tsx  TreeVisualization.module.css  WasmProvider.tsx
docs/src/components/mcts/GameBoard/: NimBoard.module.css  NimBoard.tsx
docs/src/components/treant/: BarChart.module.css  BarChart.tsx  ParameterControls.module.css  PlaybackControls.module.css  SideBySide.module.css  SideBySide.tsx  StatsPanel.module.css  TreeVisualization.tsx  WasmProvider.tsx
docs/src/css/themes/: theme-01-workshop.css  theme-02-terminal.css  theme-03-ink.css  theme-04-rust.css  theme-05-arctic.css  theme-06-brutalist.css  theme-07-midnight.css  theme-08-blueprint.css  theme-09-solarized.css  theme-10-graphite.css
docs/src/pages/: index.module.css  index.tsx  playground.module.css  playground.tsx
docs/superpowers/plans/: 2026-04-05-binding-overhead-benchmarks.md  2026-04-06-famous-games.md  2026-04-06-naive-reader-fixes.md
examples/: alphazero_basics.rs  counting_game.rs  dice_game.rs  nim_solver.rs  score_bounded.rs  tree_reuse.rs
examples/output/: alphazero_basics.txt  counting_game.txt  dice_game.txt  nim_solver.txt  score_bounded.txt  tree_reuse.txt
mcts-dynamic/: Cargo.toml
mcts-dynamic/benches/: overhead.rs
mcts-dynamic/src/: adapter.rs  callbacks.rs  evaluators.rs  lib.rs  manager.rs  types.rs
mcts-dynamic/tests/: golden.rs
mcts-gumbel/: Cargo.toml
mcts-gumbel/src/: lib.rs
mcts-gumbel/tests/: gumbel_tests.rs
mcts-wasm/: Cargo.toml
mcts-wasm/src/: connectfour.rs  counting.rs  dice.rs  game2048.rs  lib.rs  nim.rs  prior.rs  shift.rs  tictactoe.rs  types.rs
src/: atomics.rs  batch.rs  lib.rs  search_tree.rs  transposition_table.rs  tree_policy.rs
tests/: mcts_tests.rs
tests/golden/: golden_tests.json
treant-dynamic/: Cargo.toml  README.md
treant-dynamic/benches/: overhead.rs
treant-dynamic/src/: adapter.rs  callbacks.rs  evaluators.rs  manager.rs  types.rs
treant-dynamic/tests/: golden.rs
treant-gumbel/: Cargo.toml  README.md
treant-gumbel/src/: lib.rs
treant-gumbel/tests/: gumbel_tests.rs
treant-wasm/: Cargo.toml  README.md
treant-wasm/src/: connectfour.rs  counting.rs  dice.rs  game2048.rs  lib.rs  mancala.rs  nim.rs  prior.rs  shift.rs  tictactoe.rs  types.rs
