[workspace]
members = [".", "mcts-wasm", "mcts-dynamic", "mcts-gumbel"]

[package]
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]
name = "mcts"
version = "0.3.0"
description = "This is a library for Monte Carlo tree search."
repository = "https://github.com/zxqfl/mcts"
readme = "README.md"
keywords = ["monte", "carlo", "tree", "search", "ai"]
categories = ["algorithms"]
license = "MIT"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
vec_storage_reuse = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

[profile.release.package.mcts-wasm]
opt-level = "s"
