[workspace]
members = [".", "treant-wasm", "treant-dynamic", "treant-gumbel"]

[package]
authors = [
    "Peter Wicks <patricker@gmail.com>",
    "Jacob Jackson <jacobbfjackson@gmail.com>",
]
name = "treant"
version = "0.4.0"
description = "High-performance, lock-free Monte Carlo Tree Search library for Rust."
repository = "https://github.com/patricker/treant"
homepage = "https://mcts.dev"
readme = "README.md"
keywords = ["mcts", "monte-carlo", "tree-search", "game-ai", "alphazero"]
categories = ["algorithms", "game-development", "simulation", "concurrency"]
license = "MIT"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
vec_storage_reuse = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

[profile.release.package.treant-wasm]
opt-level = "s"
