[package]
name = "mcts-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the mcts crate — powers the interactive playground."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mcts = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = { version = "0.8", features = ["small_rng"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]
