[package]
name = "treant-dynamic"
version = "0.1.0"
edition = "2021"
description = "Runtime-polymorphic adapter for the treant crate, enabling language bindings."

[dependencies]
treant = { path = ".." }
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"

[dev-dependencies]
serde_json = "1"
criterion = "0.5"

[[bench]]
name = "overhead"
harness = false
