[package]
name = "treant-dynamic"
version = "0.1.0"
edition = "2021"
authors = ["Peter Wicks <patricker@gmail.com>"]
description = "Runtime-polymorphic adapter for the treant crate, enabling language bindings without Rust generics."
repository = "https://github.com/patricker/treant"
homepage = "https://mcts.dev"
readme = "README.md"
keywords = ["mcts", "ffi", "bindings", "tree-search", "game-ai"]
categories = ["algorithms", "game-development", "api-bindings"]
license = "MIT"

[dependencies]
treant = { version = "0.4", path = ".." }
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
treant-wasm = { path = "../treant-wasm" }

[[bench]]
name = "overhead"
harness = false
